--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-diffusers==0.10.2
-transformers==4.26.1
+diffusers>=0.10.2
+transformers>=4.26.1
 torch>=2.2.0
-accelerate==0.16.0
-pillow==9.4.0
-requests==2.28.2
-ftfy==6.1.1
-scipy==1.10.0
+pillow>=10.0.0
+requests>=2.28.2
+ftfy>=6.1.1
