--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,21 @@
+--extra-index-url https://download.pytorch.org/whl/cu126
+
+# Core diffusion stack
 diffusers>=0.21.0
 transformers>=4.26.1
 accelerate>=0.26.0
 safetensors>=0.4.1
-torch>=2.2.0
+
+# Pin the PyTorch family to matching CUDA 12.6 builds for Colab GPU runtimes
+torch==2.8.0+cu126
+torchvision==0.23.0+cu126
+torchaudio==2.8.0+cu126
+
+# Resolve gcsfs/fsspec compatibility warnings triggered by Kohya installs
+fsspec==2025.3.0
+gcsfs==2025.3.0
+
+# General utilities
 pillow>=10.0.0
 requests>=2.28.2
 ftfy>=6.1.1
